syntax = "proto3";

package sidero.link;

option go_package = "github.com/talos-systems/siderolink/api/siderolink/pb";

// ProvisionService initiates the SideroLink connection.
service ProvisionService {
  rpc Provision(ProvisionRequest) returns (ProvisionResponse);
}

// rpc Provision

message ProvisionRequest {
    // Node UUID as string.
    string node_uuid = 1;
    // Wireguard public key (as string) of the node.
    string node_public_key = 2;
    // Join token (as string) of the node.
    optional string join_token = 3;
}

message ProvisionResponse {
    // Server Wireguard endpoint IP and port.
    string server_endpoint = 1;
    // Server public Wireguard key encoded as string.
    string server_public_key = 3;
    // Node address with prefix on the Wireguard tunnel.
    string node_address_prefix = 4;
    // Server address on the Wireguard tunnel.
    string server_address = 5;
}
